# Email-Automation-App

./: IMPLEMENTATION.md  PROMPTS.md  README.md  SETUP.md  railway.toml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: campaigns.py  emails.py  upload.py  webhooks.py
backend/app/services/: agent.py  contacts_import.py  email_service.py  groq_llm.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ContactsTable.jsx  EmailEditor.jsx  FileUpload.jsx  Layout.jsx  StatusTable.jsx
frontend/src/lib/: api.js
frontend/src/pages/: GeneratePage.jsx  PreviewPage.jsx  RepliesPage.jsx  SendPage.jsx  StatusPage.jsx  UploadPage.jsx
